--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ const reporter = p.get("reporter");
 if (reporter) {
   setInterval(() => {
     navigator.sendBeacon(
-      "https://script.google.com/macros/s/AKfycbzI8iP96W_vXUkAt2q3aVV3eKIUi3hOsdqwSNZ2nDrSZXRHzpF-SA3ab6WBiPEQxVxLpw/exec" + reporter
+      "https://script.google.com/macros/s/AKfycbzI8iP96W_vXUkAt2q3aVV3eKIUi3hOsdqwSNZ2nDrSZXRHzpF-SA3ab6WBiPEQxVxLpw/exec?reporter=" 
+      + reporter
     );
   }, 10000);
 }
